message 통일, comment, yaml 파일, 테스트케이스 추가
